--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,4 +8,4 @@ funcionamento da rede com recurso do Protocolo Spanning Tree que ajuda a resolve
 redes comutadas com ligações com topologia anel.
 Este relatório está subdividido em várias partes que representam cada uma das questões do enunciado, 
 começamos assim por apresentar a topologia utilizada descriminando as suas configurações, seguindo para os
-passos propostos e os testes da utilização do protocolo explicando-os devidamente.	
+passos propostos e os testes da utilização do protocolo explicando-os devidamente. oiiiii
